[combat] Fixed the confusion between \subsection and \subsubsection.
As not to loose this gem of code:
compact enumeration:
  \begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -32,18 +32,25 @@
 финт                     &                    &                &                                                &        \\
 изисквана сила           & изисквана сила     &                &                                                &        \\
 свойства на оръжие       & свойства на оръжие &                &                                                &        \\
-Щм, Щс, Щт               & Щ                  &                &                                                &        \\
+типове щети              &                    &                &                                                &        \\
+щети                     & щети               &                &                                                &        \\
                          &                    & нападение      & ???                                            & бонус  \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Стрелба}
-стрелба                  &                    &                    &                                                &        \\
 автоматична стрелба      &                    &                    &                                                &        \\
+изстрел                  &                    &                    &                                                &        \\
+лесни оръжия             &                    &                    &                                                &        \\
+обсег                    & обсег              & обсег              &                                                &        \\
 прицелване               &                    &                    &                                                &        \\
 стрелба по крайник       &                    &                    &                                                &        \\
-лесни оръжия             &                    &                    &                                                &        \\
-инкремент на обсег       & инкремент на обсег & инкремент на обсег &                                                &        \\
                          &                    & обстрел            & ???                                            &        \\
+\end{abstractiontable}
+
+\begin{abstractiontable}{Отбрана}
+абсорбация               &               &                &                                                &  \\
+покритие                 & общо покритие &                &                                                &  \\
+                         &               & отбрана        &                                                &  \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Ресурси}
@@ -59,26 +66,27 @@
                          &          & морал          &                                                &  \\
 \end{abstractiontable}
 
-\begin{abstractiontable}{Отбрана}
-Покритие                 & общо покритие &                &                                                &  \\
-Абсорбация               &               &                &                                                &  \\
-                         &               & отбрана        &                                                &  \\
-\end{abstractiontable}
+
+\subsection{Списък с правила}
 
 
-\subsection{Автоматична стрелба}
+\subsubsection{Абсорбация}
+Свойството на броня да абсорбира част от сериозността на удар.
+
+
+\subsubsection{Автоматична стрелба}
 Автоматичните оръжия са способни да произведат повече от един изстрел за ход.
-Хвърлянето за атака е едно.
+Хвърлянето за атака е едно и броят изстрели се заявява предварително.
 Всеки изстрел след първия има <откат> точки по-малко атака, натрупвайки се.
 
 
-\subsection{Байнд}
+\subsubsection{Байнд}
 Наместо атакуване с ръкопашно оръжие, войн може да опита да постигне доминантна позиция в байнд.
 Това изисква двамата войни да са на дистанция, в която поне единият може да удари другия.
 Следващия ход нападателят има +5 на боравене.
 
 
-\subsection{Боравене}
+\subsubsection{Боравене}
 Число, описващо колко вероятно е ръкопашна или далечна атака да достигне целта си.
 Равно е на умението с използвното оръжие.
 \\
@@ -90,7 +98,7 @@
 Ако нападението е поне равно на отбраната, удар е пласиран, но може да бъде спрян от броня.
 
 
-\subsection{Дистанция}
+\subsubsection{Дистанция}
 \begin{enumerate}
 \item{директна (борба)}
 \item{близка (нож, невъоръжен, къс меч)}
@@ -114,12 +122,12 @@
 }
 
 
-\subsection{Джаб}
+\subsubsection{Джаб}
 Това е бърза ръкопашна атака, която избягва откриване или дисбалансиране на себе си.
 Ползва (боравене+5), но причинява (Щ/2).
 
 
-\subsection{Езда, Шофиране}
+\subsubsection{Езда, Шофиране}
 Ползване на умения от гърба на кон е ограничено до нивото на езда.
 Например при боравене с копие 6 и езда 4, нападението е 4 + *d.
 За шофиране се ползва нивото на умение на шофьора.
@@ -137,90 +145,107 @@
 Друго приложение на умела езда е бързо придвижване през труден терен или по улици със завои.
 
 
-\subsection{ЖТ}
+\subsubsection{ЖТ}
 Жизнените точки са равни на Сила.
 Ако бъдат бъдат редуцирани до или под 0, съществува опасност от безсъзнание или смърт.
 При всяка рана, която резултира в ЖТ <=0, се хвърля зар.
 5 -> смърт, 3 -> безсъзнание и смъртоносна рана, 1 -> безсъзнание
 
 
-%\subsection{здрави/ранени}
+%\subsubsection{здрави/ранени}
 % Брой боеспособни войници с/у брой небоеспособни
 % Ранените забавят армията, и някои от тях никога не се възстановяват
 
 
-%\subsection{Придвижване на армия}
+%\subsubsection{Придвижване на армия}
 % фактори - статистики на хората, брой коне, размер на обоза
 
 
-\subsection{Изисквана сила}
+\subsubsection{Изисквана сила}
 Това е обсегът на Сила на героят, в който оръжието е ефективно.
 Ако персонажът има по-малко от минималната сила, разликата става наказание върху боравенето с това оръжие.
 От друга страна, Сила, по-висока от максималната, не допринася за по-високи щети.
 
 
-\subsection{Инкремент на обсег}
+\subsubsection{Изстрел}
+Тук спадат всички далечни оръжия без автоматичен режим на стрелба като лък, арбалет, пистолет и дори франциска или просто камък.
+\\
+\\
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{l | l | l | l }
+Ситуация         & Трудност & Модификация & Бележки                                                    \\
+неподвижен човек & 0        & -           &                                                            \\
+следящ оръжието  & Ловкост  & -           & струва цял ход                                             \\
+тичане           & -        & +5          &                                                            \\
+в ръкопашен бой  & -        & +5          & при пропуск се хвърля срещу останалите учасници в клането  \\
+\end{tabular}
+
+
+\subsubsection{Инкремент на обсег}
 За стрелящи оръжия.
 Най-голямото разстояние, на което стрелецът може да се прицели с лекота.
 През всеки инкремент метра, атаките търпят по -5 наказание.
 
 
-\subsection{Лесни оръжия}
+\subsubsection{Лесни оръжия}
 Някои оръжия, като арбалетът или повечето огнестрелни оръжия, могат да бъдат ползвани след само ден тренировки.
 С тях може да бъде нападано ползвайки Ловкост, наместо боравене.
 Твоа важи само за нападение - боравене е нужно за Прицелена стрелба, ремонтиране, ползване ранен и така нататък други действия.
 
 
-\subsection{Многобой}
+\subsubsection{Многобой}
 Това е ситуация, в която един войн е в ръкопашен бой с няколко врага.
 Тогава той има право само на една отбрана на ход като париране или отбягване, и има трудност да бъде уцелен 0 срещу всички останали нападение.
 Алтернативно, той може да отдели някои точки от основната си отбрана за последващи такива.
 Примерно мечоносец с боравене 8 може да реши да се предпази от двамата си опоненти с (4 + d*), наместо от първия с (8 + d*) и от втория с (d*).
 
 
-\subsection{Нападение на строй}
+\subsubsection{Нападение на строй}
 нападение = (боравене + средни Щ (+ 5 за конник)) / 2
 
 
-\subsection{Обстрел - строеви}
+\subsubsection{Обстрел на строй}
 обстрел = (боравене + средни Щ) / 2
 
 
-\subsection{Обща абсорбация}
+\subsubsection{Обща абсорбация}
+общо покритие = (покритие глава + покритие торс + покритие ръце + покритие крака) / 4
+\\
 обща абсорбация = (аб + общо покритие) / 2
 
 
-\subsection{Общо покритие}
-общо покритие = (покритие глава + покритие торс + покритие ръце + покритие крака)/5
-
-
-\subsection{Отбрана на строй}
+\subsubsection{Отбрана на строй}
 отбрана = (боравене + обща абсорбация)
 
 
-\subsection{Прицелена атака}
-Ръкопашна атака не е насочена към 'врага', а към конкретна част от тялото му.
+\subsubsection{Покритие(на броня)}
+Парчета броня могат да бъдат носени заедно или едно под друго.
+\begin{itemize}
+\item{на главата може да бъде носен шлем върху бронирана качулка}
+\item{на торса може да бъде носен нагръдник върху ризница и гамбезон; или плочи върху бронежилетка}
+\item{на ръцете могат да бъдат носени нараменници, налакътници и ръкавици върху бронирани ръкави}
+\item{на краката могат да бъдат носени бронирана пола, набедреници, наколенки, грейвси върху бронирани крачоли}
+\end{itemize}
+
+Колкото по-голяма е разликата при хвърлянето за уцелване, толкова по-вероятно е да е уцелено слабо място в бронята, заобикаляйки я частично или напълно.
+Брони една върху друга действат независимо една от друга.
 \\
+\underline{Пример}:
+Нагръдник с покритие 5 върху ризница с покртитие 10.
 \rowcolors{1}{white}{lightgray}
-\begin{tabular}{l | l | l | l }
-глава & -  \\
-торс  & -  \\
-ръка  & може да бъде извършена на една дистанция по-далеч от нормално  \\
-крак  & -  \\
+\begin{tabular}{ p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm} }
+боравене на нападателя + d* >= боравене на отбраняващият се + 10 & всичката броня е заобиколена  \\
+боравене на нападателя + d* >= боравене на отбраняващият се + 5  & нападението заобикаля нагръдника, но попада в ризницата  \\
+боравене на нападателя + d* >= боравене на отбраняващият се      & нападението попада в нагръдника, и ако той не го спре- в ризницата  \\
 \end{tabular}
+\\
+От друга страна, някои парчета боня се носят заедно.
+\\
+\underline{Пример}:
+Ръкавици с покритие 4 и налакътници с покритие 3 представляват една броня за ръцете с покритие 7 и абсорбация средно аритметично от двете.
 
-
-\subsection{Стрелба по крайник}
-\rowcolors{1}{white}{lightgray}
-\begin{tabular}{l | l | l | l }
-глава & модификация -5  \\
-торс  & -  \\
-ръка & модификация -5  \\
-крак & модификация -5  \\
-\end{tabular}
-
-
-\subsection{Ранa}
+ 
+\subsubsection{Ранa}
 След като нападение премине през бронята, делим оставащите точки щети на Сила на ранения:
 \\
 \\
@@ -248,39 +273,35 @@
 Симптомите са незабавно безсъзнание докато причинителят не бъде отстранен.
 
 
+\subsubsection{Стрелба по крайник}
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{l | l | l | l }
+глава & модификация -5  \\
+торс  & -  \\
+ръка & модификация -5  \\
+крак & модификация -5  \\
+\end{tabular}
+
+
+
 %\\
-%\subsection{Напдение}
+%\subsubsection{Напдение}
 %TODO: reclim notes from Sofia.
 %\\
 
 
-% /subsection{Бонус}
+% /subsubsection{Бонус}
 % TODO: base upon notes from Sofia
 
 
-%\subsection{Навесна стрелба}
+%\subsubsection{Навесна стрелба}
 
 
-\subsection{Прицелване}
+\subsubsection{Прицелване}
 Това действие е възможно, когато се ползва изцяло стрелящо оръжие като арбалет или пушка, но не и лък или ръчна граната.
 То може да бъде извъшено толкова пъти, колкото е (боравене) със съответното оръжие.
 Всеки ход, прекаран в прицелване, добавя +1 модификация.
 След това целта може да бъде следена, запазвайки модификацията, докато нещо съществено се промени: влезе в автомобил, легне, затича се.
-
-
-\subsection{Стрелба}
-Тук спадат всички далечни оръжия без автоматичен режим на стрелба като лък, арбалет, пистолет и дори франциска или просто камък.
-\\
-\\
-\rowcolors{1}{white}{lightgray}
-\begin{tabular}{l | l | l | l }
-Ситуация         & Трудност & Модификация & Бележки                                                    \\
-неподвижен човек & 0        & -           &                                                            \\
-следящ оръжието  & Ловкост  & -           & струва цял ход                                             \\
-тичане           & -        & +5          &                                                            \\
-в ръкопашен бой  & -        & +5          & при пропуск се хвърля срещу останалите учасници в клането  \\
-\end{tabular}
-\\
 
 
 \subsubsection{Прикритие}
@@ -309,31 +330,31 @@
 \end{itemize}
 
 
-\subsection{Удар по крайник}
+\subsubsection{Удар по крайник}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | l | l | l }
 глава & -  \\
 торс  & -  \\
-ръка  & -  \\
+ръка  & може да бъде извършена на една дистанция по-далеч от нормално  \\
 крак  & -  \\
 \end{tabular}
 
 
-\subsection{Щм, Щс, Щт}
-Мушакщи атаки са бързи, но оставят нападателя открит за контраатака(боравене-5 следващия ход).
+\subsubsection{Типове щети}
+Мушакщи атаки (Щм) са бързи, но оставят нападателя открит за контраатака(боравене-5 следващия ход).
 Причиняват високa смъртност(Щ*2).
 \\
 \\
-Сечащи атаки постигат балнс между офанзива и отбрана, защото арката на удара действа като париране/щит.
+Сечащи атаки (Щс) постигат балнс между офанзива и отбрана, защото арката на удара действа като париране/щит.
 \\
 \\
-Трошащи атаки преминават през броня(аб/2).
+Трошащи атаки (Щт) преминават през броня(аб/2).
 Те обаче са бавни, съотeрно лесни за отбягване(боравене-5).
 Заради инертността на оръжието, атаките са трудни за париране (боравене-5 за париране с остро оръжие).
 Същото важи и в обратната ситуация(боравене-5 за париране на остро оръжие).
 
 
-\subsection{Финт}
+\subsubsection{Финт}
 Финтът е хазарт.
 Сравнява се (боравене с вражеското оръжие + d*) с/у (боравене на врага с нашето оръжие).
 Ако е поне равно, се получава (боравене+5) до началото на следващия ход.
@@ -341,13 +362,13 @@
 Иначе се получава (боравене-5).
 
 
-\subsection{Щети}
+\subsubsection{Щети}
 Щети от попадение с ръкопано оръжие зависят от Сила на ползвателя му според следната таблица.
 Конктетното оръжие може да има модификации върху тази стойност.
 \\
 Стрелящи оръжия нанасят щети спрямо някаква фиктивна "Сила" на оръжието.
 \\
-\begin{wraptable}[24]{l}{5.5cm}
+%\begin{wraptable}[24]{l}{5.5cm}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | c | c | c}
      & ниски & средни & високи  \\
@@ -383,10 +404,10 @@
 29 & 4d+1 & 6d-1 & 8d+1  \\
 30 & 4d+1 & 6d   & 8d+2
 \end{tabular}
-\end{wraptable}
+%\end{wraptable}
 
 
-\subsection{Брони}
+\subsubsection{Брони}
 Защитната стойност на броните се получава от това каква част от тялото е общо покрита.
 \\[1cm]
 \textbf{Пазене}:
@@ -410,7 +431,7 @@
 Общо максимум: 15
 
 
-\subsection{Специални правила}
+\subsubsection{Специални правила}
 \begin{center}
 \includegraphics[width=0.75\textwidth]{../images/siege}~
 \\[1cm]
@@ -437,7 +458,7 @@
 \end{itemize}
 
 
-\subsection{Масови сражения}
+\subsubsection{Масови сражения}
 Групи от съюзници могат да бъдат събирани в "строй".
 Не е нужно групата да е хомогенна, но трябва да имат обща цел.
 
