[preamble] Illustrative examples should be introduced with \anexample{}.

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -42,6 +42,7 @@
 \newenvironment{shortstory}{\itshape}{}  % Fluff material, to get the reader in the mood for the incoming section.
 
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}  % Horizontal line.
+\newcommand{\anexample}[1]{\underline{Пример}: \small \textit{#1} \normalsize}
 \newcommand{\firstletter}{}  % Old book style huge, gorgeous first letter of the chapter.
 \newcommand{\mychapter}{}  % A subsection title with an optional accompaning image.
 \newcommand{\smallrules}{}  % Under a small heading, list consicely several unrelated rules (paragraphs).
