--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -112,14 +112,12 @@
 Придвижване между дистанции се извършва след успешно хвърляне (независимо нападение или защита).
 Придвижването е или една категория в произволна посока или произволен брой категории, без да се преминава през заплашвани от някой враг дистанции.
 \\
-\underline{Пример}:
-\emph{Пешо, с копие и нож, напада Жоро, с меч.
+\anexample{Пешо, с копие и нож, напада Жоро, с меч.
 Пешо връхлита и напада с копието.
 Хвърля боравене + d6* < боравене на Жоро.
 Жоро е отбягнал атаката и може да промени дистанцията.
 Пешо заплашва дълга (копие една ръка) и близка(нож)
-Жоро може да избере близка, средна, дълга, отдалечена или да побегне.
-}
+Жоро може да избере близка, средна, дълга, отдалечена или да побегне.}
 
 
 \subsubsection{Джаб}
@@ -230,7 +228,7 @@
 Колкото по-голяма е разликата при хвърлянето за уцелване, толкова по-вероятно е да е уцелено слабо място в бронята, заобикаляйки я частично или напълно.
 Брони една върху друга действат независимо една от друга.
 \\
-\underline{Пример}:
+\anexample{
 Нагръдник с покритие 5 върху ризница с покртитие 10.
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{ p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm} }
@@ -238,11 +236,11 @@
 боравене на нападателя + d* >= боравене на отбраняващият се + 5  & нападението заобикаля нагръдника, но попада в ризницата  \\
 боравене на нападателя + d* >= боравене на отбраняващият се      & нападението попада в нагръдника, и ако той не го спре- в ризницата  \\
 \end{tabular}
+}
 \\
 От друга страна, някои парчета боня се носят заедно.
 \\
-\underline{Пример}:
-Ръкавици с покритие 4 и налакътници с покритие 3 представляват една броня за ръцете с покритие 7 и абсорбация средно аритметично от двете.
+\anexample{Ръкавици с покритие 4 и налакътници с покритие 3 представляват една броня за ръцете с покритие 7 и абсорбация средно аритметично от двете.}
 
  
 \subsubsection{Ранa}
@@ -405,30 +403,6 @@
 30 & 4d+1 & 6d   & 8d+2
 \end{tabular}
 %\end{wraptable}
-
-
-\subsubsection{Брони}
-Защитната стойност на броните се получава от това каква част от тялото е общо покрита.
-\\[1cm]
-\textbf{Пазене}:
-\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
-\item{Шлем за темето(селяшки, евентуално с периферия) 1}
-\item{Шлем с открито лице(с набузници или кръст за носа и очите, каска) 2}
-\item{Шлем със забрало(пълен шлем) 3}
-\item{Яка (към пълен шлем или като отделен компонент) +1}
-
-\item{Кираса/Бронежилетка 5}
-
-\item{Паудрони (част от ризница с къси ръкави или като отделен компонент) +1}
-\item{Налакътници (част от дълга ризница или отделен компонент) +1}
-\item{Ръкавици +1}
-
-\item{Сабатони (бронирани ботуши) +1}
-\item{Грейвси (броня от коленото надолу по пищяла) +1}
-\item{Набедреници(може да е пола, част от дълга ризница или отделен компонент) +1}
-\end{itemize}
-
-Общо максимум: 15
 
 
 \subsubsection{Специални правила}
