[combat] Finished restructuring. Rules are in alphabetic order.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -26,6 +26,7 @@
 \begin{abstractiontable}{Ръкопашен сблъсък}
 байнд                    &                    &                &                                                &        \\
 боравене                 & боравене           &                &                                                &        \\
+две оръжия               &                    &                &                                                &        \\
 дистанция                &                    &                &                                                &        \\
 джаб                     &                    &                &                                                &        \\
 удар по крайник          &                    &                &                                                &        \\
@@ -38,13 +39,13 @@
 \end{abstractiontable}
 
 \begin{abstractiontable}{Стрелба}
-автоматична стрелба      &                    &                    &                                                &        \\
-изстрел                  &                    &                    &                                                &        \\
-лесни оръжия             &                    &                    &                                                &        \\
-обсег                    & обсег              & обсег              &                                                &        \\
-прицелване               &                    &                    &                                                &        \\
-стрелба по крайник       &                    &                    &                                                &        \\
-                         &                    & обстрел            & ???                                            &        \\
+автоматична стрелба      & автоматична стрелба &                    &                                                &        \\
+изстрел                  & изстрел             &                    &                                                &        \\
+лесни оръжия             & лесни оръжия        &                    &                                                &        \\
+обсег                    & обсег               & обсег              &                                                &        \\
+прицелване               &                     &                    &                                                &        \\
+стрелба по крайник       &                     &                    &                                                &        \\
+                         &                     & обстрел            & ???                                            &        \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Отбрана}
@@ -98,6 +99,13 @@
 Ако нападението е поне равно на отбраната, удар е пласиран, но може да бъде спрян от броня.
 
 
+\subsubsection{Две оръжия}
+Едното оръжие се ползва за да нанесат щети на врага, нека наречем него първо.
+Второто оръжие може да се ползва за създаване на откриване (което добавя половината боравене в това оръжие към боравенето с основното оръжие) или пък независимо, за пласиране на стопиращи удари (в който случай се ползва независимо, но с наказание -5 на атака).
+Ако се атакува само с едното оръжие няма наказания, разбира се.
+Щитовете не търпят -5 при пазене.
+
+
 \subsubsection{Дистанция}
 \begin{enumerate}
 \item{директна (борба)}
@@ -128,8 +136,6 @@
 \subsubsection{Езда, Шофиране}
 Ползване на умения от гърба на кон е ограничено до нивото на езда.
 Например при боравене с копие 6 и езда 4, нападението е 4 + *d.
-За шофиране се ползва нивото на умение на шофьора.
-Той обаче ако ползва някакви умения (примерно да стреля през прозореца), вади нивото на умението от шофирането си.
 \\
 \\
 Ръкопашни атаки от и по галопиращ конник са с двойни щети.
@@ -148,15 +154,6 @@
 Ако бъдат бъдат редуцирани до или под 0, съществува опасност от безсъзнание или смърт.
 При всяка рана, която резултира в ЖТ <=0, се хвърля зар.
 5 -> смърт, 3 -> безсъзнание и смъртоносна рана, 1 -> безсъзнание
-
-
-%\subsubsection{здрави/ранени}
-% Брой боеспособни войници с/у брой небоеспособни
-% Ранените забавят армията, и някои от тях никога не се възстановяват
-
-
-%\subsubsection{Придвижване на армия}
-% фактори - статистики на хората, брой коне, размер на обоза
 
 
 \subsubsection{Изисквана сила}
@@ -179,12 +176,6 @@
 \end{tabular}
 
 
-\subsubsection{Инкремент на обсег}
-За стрелящи оръжия.
-Най-голямото разстояние, на което стрелецът може да се прицели с лекота.
-През всеки инкремент метра, атаките търпят по -5 наказание.
-
-
 \subsubsection{Лесни оръжия}
 Някои оръжия, като арбалетът или повечето огнестрелни оръжия, могат да бъдат ползвани след само ден тренировки.
 С тях може да бъде нападано ползвайки Ловкост, наместо боравене.
@@ -202,8 +193,14 @@
 нападение = (боравене + средни Щ (+ 5 за конник)) / 2
 
 
+\subsubsection{Обсег}
+За стрелящи оръжия.
+Най-голямото разстояние, на което стрелецът може да се прицели с лекота.
+През всеки инкремент метра, атаките търпят по -5 наказание.
+
+
 \subsubsection{Обстрел на строй}
-обстрел = (боравене + средни Щ) / 2
+обстрел = (боравене + средни Щ (+5 за автоматични оръжия)) / 2
 
 
 \subsubsection{Обща абсорбация}
@@ -242,6 +239,28 @@
 \\
 \anexample{Ръкавици с покритие 4 и налакътници с покритие 3 представляват една броня за ръцете с покритие 7 и абсорбация средно аритметично от двете.}
 
+
+\subsubsection{Прицелване}
+Това действие е възможно, когато се ползва изцяло стрелящо оръжие като арбалет или пушка, но не и лък или ръчна граната.
+То може да бъде извъшено толкова пъти, колкото е (боравене) със съответното оръжие.
+Всеки ход, прекаран в прицелване, добавя +1 модификация.
+След това целта може да бъде следена, запазвайки модификацията, докато нещо съществено се промени: влезе в автомобил, легне, затича се.
+
+
+\subsubsection{Прикриване}
+Прикритие от ръкопашни атаки, като зад тезгях или зад ъгъла, дава (боравене+5) за целите на отбрана и на двамата опоненти.
+\\
+\\
+Когато става дума за стрелба, концепцията е далеч по-важна и ефективна.
+Следната модификация се вади от боравенето на враг, стрелящ по прикрития персонаж.
+\\
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{l | l | p{10cm}}
+Ситуация        & Модификация & Бележки \\
+полу-прикритие  & -5          & поне половината тяло е скрито, примерно зад крепостна стена или заложник \\
+пълно прикритие & -10         & примерно зад ъгъла; атаки търпят -5 наказание                            \\
+\end{tabular}
+
  
 \subsubsection{Ранa}
 След като нападение премине през бронята, делим оставащите точки щети на Сила на ранения:
@@ -278,42 +297,6 @@
 торс  & -  \\
 ръка & модификация -5  \\
 крак & модификация -5  \\
-\end{tabular}
-
-
-
-%\\
-%\subsubsection{Напдение}
-%TODO: reclim notes from Sofia.
-%\\
-
-
-% /subsubsection{Бонус}
-% TODO: base upon notes from Sofia
-
-
-%\subsubsection{Навесна стрелба}
-
-
-\subsubsection{Прицелване}
-Това действие е възможно, когато се ползва изцяло стрелящо оръжие като арбалет или пушка, но не и лък или ръчна граната.
-То може да бъде извъшено толкова пъти, колкото е (боравене) със съответното оръжие.
-Всеки ход, прекаран в прицелване, добавя +1 модификация.
-След това целта може да бъде следена, запазвайки модификацията, докато нещо съществено се промени: влезе в автомобил, легне, затича се.
-
-
-\subsubsection{Прикритие}
-Прикритие от ръкопашни атаки, като зад тезгях или зад ъгъла, дава (боравене+5) за целите на отбрана и на двамата опоненти.
-\\
-\\
-Когато става дума за стрелба, концепцията е далеч по-важна и ефективна.
-Следната модификация се вади от боравенето на враг, стрелящ по прикрития персонаж.
-\\
-\rowcolors{1}{white}{lightgray}
-\begin{tabular}{l | l | p{10cm}}
-Ситуация        & Модификация & Бележки \\
-полу-прикритие  & -5          & поне половината тяло е скрито, примерно зад крепостна стена или заложник \\
-пълно прикритие & -10         & примерно зад ъгъла; атаки търпят -5 наказание                            \\
 \end{tabular}
 
 
@@ -405,31 +388,10 @@
 %\end{wraptable}
 
 
-\subsubsection{Специални правила}
 \begin{center}
 \includegraphics[width=0.75\textwidth]{../images/siege}~
 \\[1cm]
 \end{center}
-
-\subsubsection{Езда}
-\begin{itemize}
-\item[-]{нивото на ползване на умения от гърба на кон е ограничено до нивото на умението “езда”}
-\item[-]{ръкопашни атаки от и по ездач на галопиращ кон са с двойни щети}
-\item[-]{атаки от и по ездач на кон с късо оръжие търпят -5 атака}
-\end{itemize}
-
-\subsubsection{Две оръжия}
-Едното оръжие се ползва за да нанесе щети на врага, нека наречем него първо.
-Второто оръжие може да се ползва за създаване на откриване (което добавя половината боравене в това оръжие към боравенето с основното оръжие) или пък независимо, за пласиране на стопиращи удари (в който случай се ползва независимо, но с наказание -5 на атака).
-Ако се атакува само с едното оръжие няма наказания, разбира се.
-Щитовете не търпят -5 при пазене.
-
-\subsubsection{Щит}
-\begin{itemize}
-\item[-]{Щитът е направен да е второ оръжие. Като такъв не търпи -5 когато се ползва за защита.}
-\item[-]{пазене от стрели 0/6 (бъклър) през 2/6(кръгъл викингски) през 4/6(дълъг римски) до 6/6 (павис). Това когато активно се криеш от стрелите, разбира се.}
-\item[-]{Дървените оръжия и щитове имат здравина 15, а стоманените 30. Това обикновено няма значерние, но силни или бронебойни атаки може да преодолеят успешно блокиране.}
-\end{itemize}
 
 
 \subsubsection{Масови сражения}
@@ -476,3 +438,29 @@
 При виждане на подготвящ се да връхлети двойно по-многоброен или много по-добре екипиран строй, строят губи 1 морал.
 
 Моралът се възстановява извън битка с 1 точка на минута.
+
+
+
+%\subsubsection{здрави/ранени}
+% Брой боеспособни войници с/у брой небоеспособни
+% Ранените забавят армията, и някои от тях никога не се възстановяват
+
+
+%\subsubsection{Придвижване на армия}
+% фактори - статистики на хората, брой коне, размер на обоза
+
+
+
+%\\
+%\subsubsection{Напдение}
+%TODO: reclim notes from Sofia.
+%\\
+
+
+% /subsubsection{Бонус}
+% TODO: base upon notes from Sofia
+
+
+%\subsubsection{Навесна стрелба}
+
+
