[items] Added item pictures, stolen fron Wikipedia. Image placement is broken.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -96,26 +96,95 @@ Some other figures: There will be one noble household per 200 population, one la
 
 \subsection{Оръжия}
 \begin{tabular}{p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm}}
-Наименование          & Необходима Сила      & Обсег      & Щети       & Свойства       & Маса  & Стойност     \\
+Наименование          & Необходима Сила      & Обсег      & Щети (Щм, Щс, Щт)       & Свойства       & Маса  & Стойност     \\
 % Едноръчни оръжия.
-Нож                   & 3-9                  & близък     & ниски      & -              & 0.2кг & много евтин  \\
-Бойна брадва          & 5-12                 & среден     & средни     & бронебойност   & 1кг   & много евтин  \\
-Къс меч               & 4-10                 & близък     & средни     & повратливост   & 1кг   & евтин        \\
-Меч 80см              & 5-12                 & среден     & средни     & повратливост   & 1кг   & евтин        \\
-Рапира                & 5-12                 & далечен    & средни     &                & 1кг   & среден       \\
+Нож                   & 3-9                  & близък     & ниски (//-2)      & -              & 0.2кг & много евтин  \\
+Брадвичка             & 5-12                 & среден     & средни, (-4//-2)  & бронебойност   & 1кг   & много евтин  \\
+атаки: средна средни -4//-2 близка -4//-2
+Къс меч               & 4-10                 & близък     & средни, (/-2/-4)  & повратливост   & 1кг   & евтин        \\
+атаки: 
+Меч 80см              & 5-12                 & среден     & средни, (//-2)    & повратливост   & 1кг   & евтин        \\
+атаки: среден /-2/-4 близък //-2
+Рапира                & 5-12                 & далечен    & средни, (+2/-2/0) &                & 1кг   & среден       \\
 
 % Двуръчни оръжия.
 Пика (две ръце)       & 4-11                 & отдалечен  & средни     & -              & 3кг   & евтин        \\
 Дълга бойна брадва    & 5-12                 & далечен    & високи     & бронебойност   & 2кг   & евтин        \\
-Дълъг меч (две ръце)  & 5-12                 & дълъг      & високи     & повратливост   & 2кг   & среден       \\
+
+име, необходима сила!, дължина, щети, свойства, маса, стойност, изображение
+Меч                   & 5-12                 & 0.9м     & средни (//-2)    & повратливост   & 1.1кг   & среден       \\
+\begin{center}
+\includegraphics[width=0.75\textwidth]{../images/sword}~
+\\[1cm]
+\end{center}
+
+Дълъг меч             & 5-12                 &  1.3м     & високи (//-2)    & повратливост   & 1.5кг   & среден       \\
+\begin{center}
+\includegraphics[width=0.75\textwidth]{../images/longsword}~
+\\[1cm]
+\end{center}
+
+Цвайхендер            & 8-15                 &  2.1м     & високи (//-2)    & -              & 3кг   & среден       \\
+\begin{center}
+\includegraphics[width=0.75\textwidth]{../images/sword}~
+\\[1cm]
+\end{center}
+
+Фалкс                 & 5-12                 & 1.5м   & високи (//-2)    & +2 на всички хвърляния срещу щитове   & 1.5кг   & евтин       \\
+\begin{center}
+\includegraphics[width=0.75\textwidth]{../images/falx}~
+\\[1cm]
+\end{center}
+
+Малък фалкс, сърп     & 5-12                 & 0.9м   & средни/високи (//-2)    & +2 на всички хвърляния срещу щитове   & 1.5кг   & евтин       \\
+\begin{center}
+\includegraphics[width=0.75\textwidth]{../images/small_falx}~
+\\[1cm]
+\end{center}
+
+Датска брадва         & 5-12                 & 1.2м & високи (+2/-2/-2) & бронебойност           & 1.5кг & евтин  \\
+\begin{center}
+\includegraphics[width=0.75\textwidth]{../images/dane_axe}~
+\\[1cm]
+\end{center}
+
+Алебарда             & 5-12                  & 1.7м      & високи (//-2)     & бронебойност, поваляне & 2.2кг & евтин  \\
+\begin{center}
+\includegraphics[width=0.75\textwidth]{../images/helbard}~
+\\[1cm]
+\end{center}
+
+Пика                 & 5-12                 &  7м     & високи (//-2)    & повратливост   & 5кг   & евтин       \\
+\begin{center}
+\includegraphics[width=0.75\textwidth]{../images/pike}~
+\\[1cm]
+\end{center}
+
+Глейв, нагината      & 5-12                 & 2.5м & високи (+2/-2/-2) & бонус срещу щитове & 1.5кг & евтин  \\
+\begin{center}
+\includegraphics[width=0.75\textwidth]{../images/glavie}~
+\\[1cm]
+\end{center}
+\begin{center}
+\includegraphics[width=0.75\textwidth]{../images/naginata}~
+\\[1cm]
+\end{center}
 
 % Отдалечени атаки.
 Метателен нож         & 3-9                  & (Сила/2)   & ниски      & -              & 0.2кг & много евтин  \\
 Метателно копие       & 5-12                 & (Сила)     & средни     & -              & 1кг   & много евтин  \\
 Дървен дълъг лък      & 7, зарежда се 1 ход  & (Сила х 2) & високи     & -              & 2кг   & евтин        \\
-Арбалет без механизъм & 7, зарежда се 2 хода & (Сила х 2) & високи     & бронебойност I & 3кг   & евтин        \\
+Малък арбалет         & 7, зарежда се 2 хода & (Сила х 2) & високи     & бронебойност I & 3кг   & евтин        \\
+Арбалет               & 7, зарежда се 2 хода & (Сила х 2) & високи     & бронебойност I & 3кг   & евтин        \\
 Арбалет с макара      & 5 необходима, 12 реална, зарежда се 10 хода & (Сила х 2) & високи & бронебойност II & 4кг & среден\\
 Колчан 12 стрели      & -                    & -          & -          & -              & 1кг   & много евтин  \\
+
+Бодкин стрела         & -                    & +3         & -3     & бронебойност       & 1.5кг & много евтин  \\
+Широка стрела         & -                    & -          & -      &                    & 1.5кг & много евтин  \\
+\begin{center}
+\includegraphics[width=0.75\textwidth]{../images/arrow}~
+\\[1cm]
+\end{center}
 
 % Щитове.
 Дървен щит 80см       & 5-12                 & близък     & ниски      & поваляне       & 2кг   & много евтин  \\
