--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -1,4 +1,23 @@
 \section{Предмети}
+
+
+\newcommand{\weapon}[8]
+{
+\begin{multicols}{2}
+\noindent #2 \\
+Необходима сила: #3  \\
+Обсег: #4  \\
+Щети: #5  \\
+Свойства: #6  \\
+Маса: #7  \\
+Стойност: #8  \\
+\includegraphics[width=0.2\textwidth]{../images/#1}~
+\end{multicols}
+}
+
+\weapon{sword}{Меч}{5-12}{среден (0.9м)}{средни (//-2)}{повратливост}{1.1кг}{евтин}
+
+
 \subsection{Валути}
 Абстрактна валута: много евтиn, евтин, среден, скъп, много скъп; няма преобразувания.  \\
 Луседом Терея: 100 имперски крони = 10 имперски рояла = 1 имперски соверен             \\
